# to_do_list

./: .gitignore  README.md  pyproject.toml  requirments.txt
TG_bot/: tg_main.py
api/: serializers.py  urls.py  views.py
bot/: admin.py  models.py
bot/management/commands/: bot.py  helper.py
static/: dates_picker.js  style.css
task/: converter.py  forms.py  models.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_task_completed.py  0002_task_user.py
templates/task/: delete.html  main.html  task.html  update.html
templates/users/: change.html  change_password.html  login.html  register.html  user_info.html
to_do_list/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
