[tool.poetry]
name = "to_do_list"
version = "0.1.0"
description = ""
authors = ["dt50 <alexfretka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.0.7"
django-crispy-forms = "1.9.1"
django-rest-framework = "0.1.0"
djoser = "^2.0.3"
pytelegrambotapi = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
